# models/transcoding_result.go
@@ -1,0 +1,9 @@
+package models
+
+// TranscodingResult struct.
+type TranscodingResult struct {
+	SessionID   string `json:"sessionId"`
+	CandidateID string `json:"candidateId"`
+	Question    string `json:"question"`
+	Result      string `json:"result"`
+}
